--- a/process/sass/_variables.scss
+++ b/process/sass/_variables.scss
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed|IBM+Plex+Serif|Open+Sans+Condensed:300|Slabo+27px');
  
 $off-white : #eee8d6;
-$darkblue : #009ac1;
+$blue : #009ac1;
 $yellow : #ffba00;
-$blue : #ca07f9;
+$pink : #ca07f9;
 $green : #548c27;
 $orange : #f39856;
 $red : #d14348;
 $purple : #6d73c2;
+$darkblue : #0A0A32;
 
 $font-main : 'IBM Plex Sans Condensed', sans-serif;
 $font-highlight : 'IBM Plex Serif', serif;
@@ -15,5 +16,5 @@ $font-heading : 'Slabo 27px', serif;
 
 $color-main : $purple;
 $color-background : $off-white;
-$color-heading : $blue;
-$color-lists : $darkblue;
+$color-heading : $pink;
+$color-lists : $blue;
