--- a/process/sass/_interface.scss
+++ b/process/sass/_interface.scss
@@ -1,6 +1,37 @@
 .btn {
+    display : inline-block;
+    padding: 6px 12px;
+    text-align : center;
+    white-space : nowrap;
+    vertical-align: middle;
+    cursor : pointer;
+    border: none;
+    border-radius: 4px;
     font-family : $font-highlight;
-    text-transform: uppercase;
-    border-color: $red;
-    background-color : $orange;
+    color : $off-white;
+  }
+  .btn-default {
+      @extend .btn;
+      background-color : $darkblue;
+  }
+  .btn-hot {
+    @extend .btn;
+      background-color: $red;
+  }
+  .btn-cool {
+    @extend .btn;
+      background-color: $blue;
+  }
+
+  .grid {
+      @include clearfix;
+      .item {
+          float: left;
+          @include imagegrid(3, 2%);
+      }
+      img {
+          display : block;
+          border-radius: 10px;
+          max-width: 100%;
+      }
   }
