--- a/process/sass/_mixin.scss
+++ b/process/sass/_mixin.scss
@@ -5,3 +5,26 @@
     background-size: cover;
     height : $height;
 }
+
+@mixin clearfix {
+    &:before,
+    &:after {
+        content : '';
+        display : table;
+    }
+    &:after {
+        clear: both;
+    }
+}
+
+@mixin imagegrid($qty, $margin) {
+    width: ((100% - (($qty - 1) * $margin)) / $qty);
+    &:nth-child(n) {
+        margin-bottom : $margin;
+        margin-right: $margin;
+    }
+    &:nth-child(#{$qty}n) {
+        margin-bottom : 0;
+        margin-right: 0;
+    }
+}
