--- a/process/sass/_interface.scss
+++ b/process/sass/_interface.scss
@@ -31,7 +31,7 @@
       }
       img {
           display : block;
-          border-radius: 10px;
+          border-radius: 20px 0 20px 0;
           max-width: 100%;
       }
   }
