--- a/process/sass/_mixin.scss
+++ b/process/sass/_mixin.scss
@@ -2,7 +2,7 @@
     background : linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.6)), url($image);
     background-repeat: no-repeat;
     background-position: $bgPos;
-    background-size: cover;
+    background-size : cover;
     height : $height;
 }
 
@@ -27,4 +27,21 @@
         margin-bottom : 0;
         margin-right: 0;
     }
+}
+
+@mixin break($args...) {
+    @if length($args) == 1 {
+        @media (min-width: nth($args, 1)) {
+            @content;
+        }
+
+    }
+
+    @else{
+        @media (min-width: nth($args, 1)) and (max-width: nth($args, 2)) {
+            @content;
+        }
+
+    }
+    
 }
